feat:添加call,aplly,bind代码，及页面优化

--- a/00_防抖和节流.html
+++ b/00_防抖和节流.html
@@ -66,6 +66,7 @@
   </div>
   <div class="mouse-move-box" id="mouse-box">鼠标移动触发事件</div>
   <script>
+    // 手写代码，简易实现，主要实现核心功能
     /**
      * 简单手写防抖函数
      * @param { Function } func 需要进行包装的函数
