feat:添加instanceof和new的代码实现和测试代码

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
   <script>
     const NAVS = [
       { title: '00 防抖和节流', src: '00_防抖和节流.html' },
-      { title: '01 callApplyBind', src: '01_callApplyBind.html' }
+      { title: '01 callApplyBind', src: '01_callApplyBind.html' },
+      { title: '02 instanceof与new', src: '02_instanceof与new.html' },
     ]
     
 
