--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       { title: '00 防抖和节流', src: '00_防抖和节流.html' },
       { title: '01 callApplyBind', src: '01_callApplyBind.html' },
       { title: '02 instanceof与new', src: '02_instanceof与new.html' },
+      { title: '03 手写Promise', src: '03_MyPromise.js' },
     ]
     
 
