feat:添加页面布局layout.html

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       { title: '01 callApplyBind', src: '01_callApplyBind.html' },
       { title: '02 instanceof与new', src: '02_instanceof与new.html' },
       { title: '03 手写Promise', src: '03_MyPromise.js' },
+      { title: '04 页面布局', src: '04_layout.html' },
     ]
     
 
