--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       { title: '02 instanceof与new', src: '02_instanceof与new.html' },
       { title: '03 手写Promise', src: '03_MyPromise.js' },
       { title: '04 页面布局', src: '04_layout.html' },
+      { title: '05 文字反色', src: '05_文字反色.html' },
     ]
     
 
