feat: 添加函数柯里化页面

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       { title: '03 手写Promise', src: '03_MyPromise.js' },
       { title: '04 页面布局', src: '04_layout.html' },
       { title: '05 文字反色', src: '05_文字反色.html' },
+      { title: '06 函数柯里化', src: '06_函数柯里化.html' },
     ]
     
 
